{
    "name": "InteractionModeControls",
    "maps": [
        {
            "name": "InteractionMode",
            "id": "34f3e68e-4ee2-4b32-8394-650dc594ccab",
            "actions": [
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "f2d6ef5b-dafa-4100-9757-c5798433fc0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenFacilityBuildingMode",
                    "type": "Button",
                    "id": "c0f5105e-98a5-489e-be01-bb4a85945acc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2735d5c-82c0-4dc3-a639-6d2ede72cfcf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbbf0f01-36c5-4678-a70f-ba1deac3c660",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fecaf1b1-30ca-41c9-b93f-a31209e236d7",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenFacilityBuildingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}